Layout Issues
Super obvious why the mixins weren't working, but made it a little
harder to catch because at some point they did work fine, which made it
only detectable after a change in mixin specific code.

--- a/scss/_site-navigation.scss
+++ b/scss/_site-navigation.scss
@@ -134,7 +134,7 @@
 // I don't like this separate stuff.
 
 
-@media only screen and (max-width: 1023px) {
+@media only screen and (max-width: 50em) {
 
   .genesis-nav-menu li,
   .header-image .title-area,
