--- a/style.css
+++ b/style.css
@@ -1614,7 +1614,7 @@ img.alignright,
   padding: 0 20px 10px;
 }
 
-@media only screen and (max-width: 1023px) {
+@media only screen and (max-width: 50em) {
   .genesis-nav-menu li,
   .header-image .title-area,
   .site-header ul.genesis-nav-menu,
@@ -1981,154 +1981,6 @@ p.entry-meta {
   margin-bottom: 0;
 }
 
-/* # Media Queries
----------------------------------------------------------------------------------------------------- */
-@media only screen and (max-width: 1023px) {
-  .genesis-nav-menu li,
-  .header-image .title-area,
-  .site-header ul.genesis-nav-menu,
-  .site-header .search-form {
-    float: none;
-  }
-
-  .genesis-nav-menu,
-  .site-description,
-  .site-header .title-area,
-  .site-header .widget-area,
-  .site-title {
-    text-align: center;
-  }
-
-  .site-header .search-form {
-    margin: 16px auto;
-  }
-
-  /* ### Genesis Responsive Menus */
-  .genesis-responsive-menu .wrap {
-    padding: 0;
-  }
-
-  .genesis-responsive-menu {
-    display: none;
-    position: relative;
-  }
-
-  .genesis-skip-link .skip-link-hidden {
-    display: none;
-    visibility: hidden;
-  }
-
-  .menu-toggle,
-  .sub-menu-toggle {
-    background-color: #fff;
-    border-width: 0;
-    color: #333;
-    display: block;
-    margin: 0 auto;
-    overflow: hidden;
-    text-align: center;
-    visibility: visible;
-  }
-
-  .menu-toggle:focus,
-  .menu-toggle:hover,
-  .sub-menu-toggle:focus,
-  .sub-menu-toggle:hover {
-    background-color: #fff;
-    border-width: 0;
-    color: #c3251d;
-  }
-
-  .menu-toggle {
-    line-height: 22px;
-    position: relative;
-    width: 100%;
-    z-index: 1000;
-  }
-
-  .menu-toggle,
-  .menu-toggle:focus,
-  .menu-toggle:hover {
-    border-top: 1px solid #eee;
-  }
-
-  .menu-toggle::before {
-    font-size: 1.5em;
-    margin-right: 10px;
-    text-rendering: auto;
-  }
-
-  .sub-menu-toggle {
-    float: right;
-    padding: 13px 10px;
-    position: absolute;
-    right: 0;
-    top: 0;
-    z-index: 100;
-  }
-
-  .sub-menu .sub-menu-toggle {
-    padding: 12px 10px;
-  }
-
-  .sub-menu-toggle::before {
-    display: inline-block;
-    text-rendering: auto;
-    transform: rotate(0);
-    transition: transform .25s ease-in-out;
-  }
-
-  .sub-menu-toggle.activated::before {
-    transform: rotate(180deg);
-  }
-
-  .genesis-responsive-menu .genesis-nav-menu .menu-item {
-    display: block;
-    float: none;
-    position: relative;
-    text-align: left;
-  }
-
-  .genesis-responsive-menu .genesis-nav-menu .menu-item:focus,
-  .genesis-responsive-menu .genesis-nav-menu .menu-item:hover {
-    position: relative;
-  }
-
-  .genesis-responsive-menu .genesis-nav-menu .menu-item a {
-    border: none;
-    margin-bottom: 1px;
-    padding: 15px 20px;
-    width: 100%;
-  }
-
-  .genesis-responsive-menu .genesis-nav-menu .sub-menu {
-    border: none;
-  }
-
-  .genesis-responsive-menu .genesis-nav-menu .menu-item > a:focus ul.sub-menu,
-  .genesis-responsive-menu .genesis-nav-menu .menu-item > a:focus ul.sub-menu .sub-menu {
-    left: 0;
-    margin-left: 0;
-  }
-
-  .genesis-responsive-menu .genesis-nav-menu > .menu-item-has-children > a::after {
-    content: none;
-  }
-
-  .genesis-responsive-menu .genesis-nav-menu .sub-menu {
-    clear: both;
-    display: none;
-    margin: 0;
-    opacity: 1;
-    padding-left: 15px;
-    position: static;
-    width: 100%;
-  }
-
-  .genesis-responsive-menu .genesis-nav-menu .sub-menu .sub-menu {
-    margin: 0;
-  }
-}
 /* # Print Styles
 ---------------------------------------------------------------------------------------------------- */
 @media print {
